# multi_quadcopter_geometric_control

./: CMakeLists.txt  package.xml
config/: SE3_all_trajectories.yaml  SE3_quadcopter_params_1.yaml  SE3_quadcopter_params_2.yaml  SE3_trajectory_crescent.yaml  SE3_trajectory_hover.yaml  SE3_trajectory_manager_drone1.yaml  SE3_trajectory_manager_drone2.yaml  SE3_trajectory_manager_drone3.yaml  SE3_trajectory_manager_drone4.yaml  SE3_trajectory_manager_drone5.yaml
include/multi_quadcopter_geometric_control/: SE3_low_level_cont.h  SE3_mid_level_cont.h  SE3_trajectory_generator.h  SE3_waypoint_server.h
launch/: multiple_quadrotor_SE3.launch
meshes/: quad_model_v1.dae  quad_model_v4.dae
rviz/: quad_rviz.rviz
scripts/: disturbance_model.m  main.m
scripts/EPS_Results/: 04_all_drones_3d_position.eps  08_all_drones_position_error.eps  Fig10a.eps  Fig10b.eps  Fig12.eps  Fig6a.eps  Fig6b.eps  Fig7.eps  Fig8.eps  Fig9.eps
src/: SE3_data_logger.cpp  SE3_eom.cpp  SE3_low_level_cont.cpp  SE3_low_level_cont_node.cpp  SE3_mid_level_cont.cpp  SE3_mid_level_cont_node.cpp  SE3_relative_disturbance_generator.cpp  SE3_rviz_data_handler.cpp  SE3_trajectory_generator.cpp  SE3_trajectory_generator_node.cpp  SE3_waypoint_server.cpp  SE3_waypoint_server_node.cpp
urdf/: quad_model_v1.urdf  quad_model_v2.urdf  quad_model_v3.urdf
